2002-03-20  Albert Chin-A-Young  <china@thewrittenword.com>

	* config/tc-arm.c (vfp_dp_reg_required_here): Fix typo
	(vfp_sp_reg_pos -> vfp_dp_reg_pos).

2002-03-19  Alexandre Oliva  <aoliva@redhat.com>

	* config/tc-mips.c (md_estimate_size_before_relax): Do not modify
	the EXTENDED bit here; report the estimate according to the
	current size.

2002-03-17  Hans-Peter Nilsson  <hp@bitrange.com>

	* config/tc-mmix.c (md_estimate_size_before_relax): Don't consider
	a weak symbol in same section to be within reach.

2002-03-07  Daniel Jacobowitz  <drow@mvista.com>

	* doc/as.texinfo: Wrap @menu in @ifnottex, not @ifinfo.

2002-03-07  Daniel Jacobowitz  <drow@mvista.com>

	* NEWS: Mark version 2.12.

2002-02-28  Jakub Jelinek  <jakub@redhat.com>

	* config/tc-alpha.c (s_alpha_text): Use obj_elf_text for OBJ_ELF, not
	s_text.
	(s_alpha_data): Use obj_elf_data for OBJ_ELF, not s_data.

2002-02-26  Chris Demetriou  <cgd@broadcom.com>

	* config/tc-mips.c (mips_need_elf_addend_fixup): For embedded-PIC
	only, undo the changes made on 2001-06-08, with the
	effect being that common or extern symbols are
	adjusted for embedded-PIC, but weak symbols are not.
	(md_estimate_size_before_relax: Likewise, with the effect
	that extern symbols are treated the same as weak symbols
	only if not embedded-PIC.
	(mips_fix_adjustable) Likewise, with the effect that
	weak or extern symbols are not adjusted for embedded-PIC.
	(md_apply_fix3): Tweak so that the case where value is zero
	is handled more correctly for embedded-PIC code.

2002-02-26  Nick Clifton  <nickc@cambridge.redhat.com>

	* configure.in (LINGUAS): Add es.po.
	* configure: Regenerate.
	* po/es.po: New file.

2002-02-25  Thiemo Seufer <seufer@csv.ica.uni-stuttgart.de>

	* config/tc-mips.c (set_at): Fix handling of 64bit register loads.
	(macro): Likewise. Fix la/dla address expansions for EMBEDDED_PIC
	and NO_PIC cases. Code cleanup.
	(macro2): Fix handling of 64bit register loads.
